Fixed layout on mobile phones

--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -175,6 +175,7 @@
 	}
 
 	.card.reversed {
+		grid-template-columns: 1fr;
 		grid-template-areas:
 			"visual"
 			"info";
